# multi-agent-code-review

./: .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.claude/commands/: prime.md
.github/workflows/: ci.yml
config/: default.yaml
scripts/: setup.sh  setup_parsers.py
src/: __init__.py  main.py
src/analysis/: __init__.py  cfg.py  cfg_builder.py  data_flow.py  symbol_table.py  taint.py
src/config/: __init__.py  parser_config.py  settings.py
src/features/: __init__.py  feature_extractor.py  feature_vector.py  normalizer.py
src/graph/: __init__.py  entity_extractor.py  extraction_result.py  graph_builder.py  knowledge_graph.py  persistence.py  relationship.py
src/metrics/: __init__.py  entity_metrics.py  metrics_calculator.py  structural_metrics.py
src/models/: __init__.py  code_entity.py  issue.py  refactoring.py  source_location.py
src/parsing/: __init__.py  ast_nodes.py  base_parser.py  java_parser.py  javascript_parser.py  python_parser.py
src/pipeline/: __init__.py  cache.py  pipeline.py  storage.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample.java  sample.js  sample.py  sample.ts
tests/test_analysis/: test_cfg.py  test_data_flow.py  test_symbol_table.py  test_taint.py
tests/test_features/: test_feature_extractor.py  test_normalizer.py
tests/test_graph/: test_entity_extractor.py  test_graph_builder.py  test_knowledge_graph.py
tests/test_metrics/: test_entity_metrics.py  test_structural_metrics.py
tests/test_models/: test_source_location.py
tests/test_parsing/: test_java_parser.py  test_javascript_parser.py  test_python_parser.py  test_typescript_parser.py
tests/test_pipeline/: test_cache.py  test_pipeline.py
